--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +10,221 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+} */
+
+header{
+  margin-left: 87px; 
+}
+*{
+  margin: 0%;
+  padding: 0%;
+}
+body{
+  /* background-image: url(2.jpg); */
+  background-size: cover;
+  background-position:center;
+  background-color: rgb(210, 218, 176);
+}
+nav{
+  box-sizing: border-box;
+  font-family: sans-serif;}
+.Menubar{    
+  background-color: rgb(27, 26, 25);
+  text-align: center;}
+.Menubar ul{    
+  display: inline-flex;
+  list-style: none;
+  color: white;
+}
+.Menubar ul li{
+  width: 120px;
+  margin-left: 15px;
+  margin-right: 15px;
+  margin-top:8px;
+  margin-bottom: 8px;
+  padding: 12px;
+  padding-bottom: 8px;
+}
+.Menubar ul li a{
+  text-decoration: none;
+  color: white;
+}
+.active, .Menubar ul li:hover{
+  background-color: gray;
+  border-radius:3px ;
+}
+.Menubar .fa{
+  margin-right: 8px;
+}
+.submenu{
+  display: none;
+}
+.Menubar ul li:hover .submenu{
+  display: block;
+  position:absolute;
+  background-color: rgb(27, 25, 25);
+  margin-top: 5px;
+  margin-left: -15px;
+}
+.Menubar ul li:hover .submenu ul{
+  display: block;
+  margin: 10px;
+}
+.Menubar ul li:hover .submenu ul li{
+  width: 150px;
+  padding: 10px;
+  border-bottom: 1px dotted #fff;
+  border-radius: 0;
+  text-align: left;
+}
+.footer{
+  background-color: #303036;
+  color: white;
+  height: 350px;
+  position: relative;
+  margin-top: 5px;
+  padding-top: 20px;
+  padding-left: 10px;
+}
+.footer .footerbottom{
+  background-color: #343a40;
+  color: #686868;
+  height: 30px;
+  text-align: center;
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  padding-top: 20px;
+  padding-bottom: 10px;
+  width: 100%;
+}
+.footer .footercontent{
+  /* border: 1px solid rgb(235, 229, 229); */
+  height: 350px;
+  display: flex;
+}
+.footer .footercontent .footer-section{
+  flex: 1;
+  /* border: 1px solid white ; */
+}
+#logo{
+  margin-bottom: 30px;
+  color: turquoise;
+  /* background-color: white;  */
+}
+.footer .footer h1,
+.footer .footer h2{
+  color: white;
+}
+.footer .footercontent .about h1 span{
+  color: turquoise;
+}
+.footer .footercontent .about .contact span{
+  display: block;
+  font-size: 1.1em;
+  margin-bottom: 12px;
+  margin-top: 10px;
+}
+.footer .footercontent .about .socials a{
+  border: 1px solid grey;
+  width: 45px;
+  height: 41px;
+  padding-top: 10px;
+  margin-right: 5px;
+  text-align: center;
+  display: inline-block;
+  font-size: 1.3em;
+  border-radius: 5px;
+  text-decoration: none;
+  color: white;
+  }
+.footer .footercontent .about .socials :hover{
+  /* border: 1px rgb(128, 125, 125) solid; */
+  color: rgb(209, 44, 32);
+}    
+.footer .footercontent .links ul a{
+  display: block;
+  margin-bottom: 10px;
+  font-size: 1.2em;
+  margin-left: 30px;
+  text-decoration: none;
+  color: white;
+}
+.footer .footercontent .links ul a:hover{
+  color: yellow;
+  margin-left: 50px;
+}
+.footer .footercontent .Contactform .contact-input{
+  background:#272727;
+  color: white;
+  margin-bottom: 10px;
+  line-height: 1.5rem;
+  padding-left: 30px;
+  padding-right: 200px;
+  margin-left: 0px;
+  border: none;   
+}
+.footer .footercontent .Contactform .btn{
+  margin-top: 10px;
+  margin-left: 0px;
+  border: cornsilk;
+  border-radius: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.footer .footercontent .Contactform .btn:hover{
+background-color: rgb(207, 20, 114);
+margin-left: 10px;
+font-size: 110%;
+}
+#reference{
+padding-left:87px ;
+}
+
+#slider{
+  overflow: hidden;
+  margin-left: 150px;
+  margin-right: 150px;
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+#slider figure{
+  position: relative;
+  width: 500%;
+  margin: 0;
+  left:0;
+  animation: 10s slider infinite;
+}
+#slider figure img{
+  float: left;
+  width: 20%;
+}
+@keyframes slider{
+  0%{left: 0;
+  }
+  20%{
+      left:0;
+  }
+  30%{
+      left:-100%;
+  }
+  45%{
+      left: -100%;
+  }
+  50%{
+      left: -200%;
+  }
+  70%{
+      left:-200%;
+  }
+  75%{
+      left:-300%;
+  }
+  95%{
+      left: -300%;
+  }
+  100%{
+      left:-400%;
+  }
+  
 }
