--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -14,7 +14,6 @@ code {
 } */
 
 header{
-  margin-left: 87px; 
 }
 *{
   margin: 0%;
@@ -26,10 +25,13 @@ body{
   background-position:center;
   font-family: "Quicksand", sans-serif;
   background-color: rgb(210, 218, 176);
+  margin-left: 100px;
 }
 nav{
   box-sizing: border-box;
-  font-family: sans-serif;}
+  font-family: sans-serif;
+
+}
 .Menubar{    
   background-color: rgb(27, 26, 25);
   text-align: center;}
@@ -102,7 +104,7 @@ nav{
   justify-content: center;
   max-width: 1200px;
   margin-block: 2rem;
-  margin-left: 80px;
+  /* margin-left: 80px; */
   gap: 2rem;
 }
 
